[workspace]
members = [
    "address",
    "atomic-u64",
    "bincode",
    "bn254",
    "cluster-type",
    "commitment-config",
    "define-syscall",
    "epoch-info",
    "fee-calculator",
    "file-download",
    "frozen-abi",
    "frozen-abi-macro",
    "hash",
    "instruction",
    "instruction-error",
    "logger",
    "nonce",
    "package-metadata",
    "package-metadata-macro",
    "poh-config",
    "precompile-error",
    "program",
    "program-error",
    "pubkey",
    "reward-info",
    "sanitize",
    "sdk",
    "sdk-macro",
    "sha256-hasher",
    "signer-store",
    "validator-exit",
]

resolver = "2"

[workspace.package]
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/solana-sdk"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false

[workspace.metadata.cli]
solana = "2.2.11"

[workspace.dependencies]
ahash = "0.8.11"
anyhow = "1.0.96"
arbitrary = "1.4.1"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
array-bytes = "1.4.1"
assert_matches = "1.5.0"
base64 = "0.22.1"
bincode = "1.3.3"
bitflags = { version = "2.8.0" }
bitvec = "1.0.1"
blake3 = "1.5.5"
blst = "0.3.14"
blstrs = "0.7.1"
borsh = { version = "1.5.5", features = ["derive", "unstable__schema"] }
boxcar = "0.2.12"
bs58 = { version = "0.5.1", default-features = false }
bv = "0.11.1"
bytemuck = "1.21.0"
bytemuck_derive = "1.8.1"
bytes = "1.10.0"
cfg_eval = "0.1.2"
chrono = { version = "0.4.39", default-features = false }
console = "0.15.10"
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
criterion = "0.5.1"
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
dashmap = { version = "5.5.3", features = ["serde"] }
derivation-path = { version = "0.2.0", default-features = false }
digest = "0.10.7"
ed25519-dalek = "2.1.1"
ed25519-dalek-bip32 = "0.3.0"
env_logger = "0.11.0"
ff = "0.13.1"
five8 = "0.2.1"
five8_const = "0.1.3"
getrandom = "0.2.10"
group = "0.13.0"
hex = "0.4.3"
hmac = "0.12.1"
im = "15.1.0"
indicatif = "0.17.9"
itertools = "0.12.1"
js-sys = "0.3.77"
k256 = "0.13.0"
lazy_static = "1.5.0"
libc = "0.2.170"
log = "0.4.25"
memmap2 = "0.5.10"
memoffset = "0.9"
num-bigint = "0.4.6"
num-derive = "0.4"
num-traits = "0.2.18"
num_enum = "0.7.3"
openssl = "0.10.72"
pairing = "0.23.0"
parking_lot = "0.12"
pbkdf2 = { version = "0.11.0", default-features = false }
proc-macro2 = "1.0.93"
proptest = "1.6"
qstring = "0.7.2"
qualifier_attr = { version = "0.2.2", default-features = false }
quote = "1.0.35"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = { version = "0.11.27", default-features = false }
serde = "1.0.217" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde-big-array = "0.5.1"
serde_bytes = "0.11.15"
serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.139"
serde_with = { version = "3.12.0", default-features = false }
serial_test = "2.0.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
signal-hook = "0.3.17"
siphasher = "0.3.11"
solana-address = { path = "address", version = "1.0.0" }
solana-atomic-u64 = { path = "atomic-u64", version = "3.0.0" }
solana-bincode = { path = "bincode", version = "3.0.0" }
solana-bn254 = { path = "bn254", version = "3.0.0" }
solana-cluster-type = { path = "cluster-type", version = "3.0.0" }
solana-commitment-config = { path = "commitment-config", version = "3.0.0" }
solana-define-syscall = { path = "define-syscall", version = "3.0.0" }
solana-epoch-info = { path = "epoch-info", version = "3.0.0" }
solana-fee-calculator = { path = "fee-calculator", version = "3.0.0" }
solana-file-download = { path = "file-download", version = "3.0.0" }
solana-frozen-abi = { path = "frozen-abi", version = "3.0.0" }
solana-frozen-abi-macro = { path = "frozen-abi-macro", version = "3.0.0" }
solana-hash = { path = "hash", version = "3.0.0", default-features = false }
solana-instruction = { path = "instruction", version = "3.0.0", default-features = false }
solana-instruction-error = { path = "instruction-error", version = "2.0.0" }
solana-logger = { path = "logger", version = "3.0.0" }
solana-nonce = { path = "nonce", version = "3.0.0" }
solana-package-metadata = { path = "package-metadata", version = "3.0.0" }
solana-package-metadata-macro = { path = "package-metadata-macro", version = "3.0.0" }
solana-poh-config = { path = "poh-config", version = "3.0.0" }
solana-precompile-error = { path = "precompile-error", version = "3.0.0" }
solana-program = { path = "program", version = "3.0.0", default-features = false }
solana-program-error = { path = "program-error", version = "3.0.0" }
solana-pubkey = { path = "pubkey", version = "3.0.0", default-features = false }
solana-reward-info = { path = "reward-info", version = "3.0.0" }
solana-sanitize = { path = "sanitize", version = "3.0.0" }
solana-sdk = { path = "sdk", version = "2.2.1" }
solana-sdk-macro = { path = "sdk-macro", version = "3.0.0" }
solana-sha256-hasher = { path = "sha256-hasher", version = "3.0.0" }
solana-signer-store = { path = "signer-store", version = "0.1.0" }
solana-validator-exit = { path = "validator-exit", version = "3.0.0" }
static_assertions = "1.1.0"
strum = "0.24"
strum_macros = "0.24"
subtle = "2.6.1"
syn = "2.0.87"
tempfile = "3.20.0"
test-case = "3.3.1"
thiserror = "2.0.11"
tiny-bip39 = "2.0.0"
toml = "0.8.23"
uriparse = "0.6.4"
wasm-bindgen = "0.2.100"

[profile.release]
split-debuginfo = "unpacked"
lto = "thin"

# Enable basic optimizations for unittests
[profile.test]
opt-level = 1

# Enable optimizations for procmacros for faster recompile
[profile.dev.build-override]
opt-level = 1
