[package]
name = "solana-cpi"
description = "Solana Cross-program Invocation"
documentation = "https://docs.rs/solana-cpi"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
solana-account-info = { workspace = true }
solana-instruction = { workspace = true, features = ["std"] }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }

[target.'cfg(target_os = "solana")'.dependencies]
solana-define-syscall = { workspace = true }
solana-stable-layout = { workspace = true }

[lints]
workspace = true
