[package]
name = "solana-program-error"
description = "Solana ProgramError type and related definitions."
documentation = "https://docs.rs/solana-program-error"
version = "2.2.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-msg = { workspace = true, optional = true }

[features]
borsh = ["dep:borsh"]
solana-msg = ["dep:solana-msg"]
serde = ["dep:serde", "dep:serde_derive"]
std = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
