[package]
name = "solana-program"
description = "Solana Program"
documentation = "https://docs.rs/solana-program"
readme = "README.md"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = "1.81.0"                          # solana platform-tools rust version
include = ["src/**/*", "README.md"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[lib]
crate-type = ["rlib"]

[features]
default = ["borsh"]
borsh = ["dep:borsh", "solana-hash/borsh", "solana-program-error/borsh"]
dev-context-only-utils = []

[dependencies]
borsh = { workspace = true, optional = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
bv = { workspace = true }
log = { workspace = true }
memoffset = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
solana-address = { workspace = true, features = [
    "atomic",
    "bytemuck",
    "curve25519",
    "decode",
    "error",
    "rand",
    "sanitize",
    "serde",
    "sha2",
    "std",
    "syscalls",
] }
solana-define-syscall = { workspace = true }
solana-hash = { workspace = true, features = ["bytemuck", "serde", "std"] }
solana-program-error = { workspace = true, features = ["serde"] }
solana-sdk-macro = { workspace = true }
solana-sha256-hasher = { workspace = true, features = ["sha2"] }

[target.'cfg(not(target_os = "solana"))'.dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
bitflags = { workspace = true }
blake3 = { workspace = true, features = ["traits-preview"] }
k256 = { workspace = true }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
sha3 = { workspace = true }
solana-logger = { workspace = true }
solana-sanitize = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
