[package]
name = "solana-program"
description = "Solana Program"
documentation = "https://docs.rs/solana-program"
readme = "README.md"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = "1.81.0"                          # solana platform-tools rust version
include = ["src/**/*", "README.md"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[lib]
crate-type = ["rlib"]

[features]
default = ["borsh"]
borsh = ["dep:borsh", "solana-program-error/borsh"]
dev-context-only-utils = []

[dependencies]
borsh = { workspace = true, optional = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
bv = { workspace = true }
curve25519-dalek = { workspace = true }
five8 = { workspace = true }
five8_const = { workspace = true }
log = { workspace = true }
memoffset = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
solana-program-error = { workspace = true, features = ["serde"] }
solana-sdk-macro = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
bitflags = { workspace = true }
blake3 = { workspace = true, features = ["traits-preview"] }
k256 = { workspace = true }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
solana-logger = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
