[package]
name = "solana-pubkey-error"
description = "Solana PubkeyError type"
documentation = "https://docs.rs/solana-pubkey-error"
version = "1.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
num-traits = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-decode-error = { workspace = true, optional = true }

[dev-dependencies]
solana-pubkey-error = { path = ".", features = ["dev-context-only-utils"] }
strum = { workspace = true }
strum_macros = { workspace = true }

[features]
dev-context-only-utils = ["num-traits"]
num-traits = ["dep:num-traits", "dep:solana-decode-error"]
serde = ["dep:serde", "dep:serde_derive"]
std = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[lints]
workspace = true
