[package]
name = "solana-sdk"
description = "Solana SDK"
documentation = "https://docs.rs/solana-sdk"
readme = "README.md"
version = "2.3.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
include = ["src/**/*", "README.md"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[lib]
crate-type = ["rlib"]

[features]
default = [
    "borsh",
    "full",  # functionality that is not compatible or needed for on-chain programs
]
full = [
    "solana-pubkey/rand",
    "dep:solana-transaction-error",
]
borsh = ["solana-program/borsh"]
dev-context-only-utils = ["solana-program/dev-context-only-utils"]
frozen-abi = [
    "solana-program/frozen-abi",
    "solana-short-vec/frozen-abi",
    "solana-transaction-error/frozen-abi",
]

[dependencies]
bincode = { workspace = true }
bitflags = { workspace = true }
bs58 = { workspace = true }
derivation-path = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
ed25519-dalek-bip32 = { workspace = true }
five8 = { workspace = true }
hmac = { workspace = true }
num_enum = { workspace = true }
pbkdf2 = { workspace = true }
qstring = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde-big-array = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
sha2 = { workspace = true }
siphasher = { workspace = true }
solana-account-info = { workspace = true }
solana-clock = { workspace = true }
solana-epoch-info = { workspace = true, features = ["serde"] }
solana-frozen-abi = { workspace = true, optional = true }
solana-frozen-abi-macro = { workspace = true, optional = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true, features = ["serde"] }
solana-instruction-error = { workspace = true }
solana-logger = { workspace = true, optional = true }
solana-message = { workspace = true, features = ["bincode", "blake3", "serde"] }
solana-program = { workspace = true }
solana-program-memory = { workspace = true }
solana-pubkey = { workspace = true, default-features = false, features = [
    "std",
] }
solana-sanitize = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-sdk-macro = { workspace = true }
solana-serde-varint = { workspace = true }
solana-sha256-hasher = { workspace = true, features = ["sha2"] }
solana-short-vec = { workspace = true }
solana-sysvar = { workspace = true, features = ["bincode"] }
solana-time-utils = { workspace = true }
solana-transaction-error = { workspace = true, features = [
    "serde",
], optional = true }
thiserror = { workspace = true }
uriparse = { workspace = true }

[dev-dependencies]
solana-instructions-sysvar = { workspace = true, features = ["dev-context-only-utils"] }
solana-program = { workspace = true, features = ["dev-context-only-utils"] }
solana-sdk = { path = ".", features = ["dev-context-only-utils"] }

[lints]
workspace = true
