[package]
name = "solana-sdk"
description = "Solana SDK"
documentation = "https://docs.rs/solana-sdk"
readme = "README.md"
version = "2.3.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
include = ["src/**/*", "README.md"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[lib]
crate-type = ["rlib"]

[features]
default = [
    "borsh",
    "full",  # functionality that is not compatible or needed for on-chain programs
]
full = ["solana-pubkey/rand"]
borsh = ["solana-program/borsh"]
dev-context-only-utils = ["solana-program/dev-context-only-utils"]

[dependencies]
bincode = { workspace = true }
bitflags = { workspace = true }
bs58 = { workspace = true }
derivation-path = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
ed25519-dalek-bip32 = { workspace = true }
five8 = { workspace = true }
hmac = { workspace = true }
num_enum = { workspace = true }
pbkdf2 = { workspace = true }
qstring = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde-big-array = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
sha2 = { workspace = true }
siphasher = { workspace = true }
solana-epoch-info = { workspace = true, features = ["serde"] }
solana-hash = { workspace = true }
solana-logger = { workspace = true, optional = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true, default-features = false, features = [
    "std",
] }
solana-sanitize = { workspace = true }
solana-sdk-macro = { workspace = true }
solana-sha256-hasher = { workspace = true, features = ["sha2"] }
thiserror = { workspace = true }
uriparse = { workspace = true }

[dev-dependencies]
solana-program = { workspace = true, features = ["dev-context-only-utils"] }
solana-sdk = { path = ".", features = ["dev-context-only-utils"] }

[lints]
workspace = true
